--- a/src/lib/styles/apply.module.css
+++ b/src/lib/styles/apply.module.css
@@ -115,20 +115,30 @@
 
 @media (max-width: 768px) {
   .apply {
-    top: calc(100vw * 5.26 * 0.8);
+    top: calc(100vw * 5.26 * 0.83 + 60px);
+    position: absolute;
+    width: 100%;
+    left: 0;
+    right: 0;
+    z-index: 1;
   }
 
   .content {
-    padding: 1rem;
-    gap: 1.5rem;
+    padding: 0.5rem;
+    gap: 0;
+    justify-content: center;
+  }
+
+  .textContainer {
+    display: none;
   }
 
   .applyBoxSvg {
-    width: 240px;
-    height: 64px;
+    width: 110px;
+    height: 30px;
   }
 
   .applyText {
-    font-size: clamp(0.875rem, 1.5vw, 1rem);
+    font-size: clamp(0.4rem, 0.85vw, 0.5rem);
   }
 }
