--- a/src/lib/styles/footer.module.css
+++ b/src/lib/styles/footer.module.css
@@ -138,8 +138,7 @@
 
 @media (max-width: 768px) {
   .footer {
-    /* 60px → 3.75rem */
-    top: calc(100vw * 5.26 * 0.98 + 3.75rem);
+    top: calc(100vw * 5.26 * 0.98);
     position: absolute;
     width: 100%;
     left: 0;
