--- a/src/lib/styles/footer.module.css
+++ b/src/lib/styles/footer.module.css
@@ -27,8 +27,8 @@
 }
 
 .text {
-  font-family: "Demoarchimotov01", sans-serif;
-  font-weight: 500;
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 400;
   font-size: clamp(0.875rem, 2vw, 1.5rem);
   line-height: 1.5;
   color: rgba(255, 255, 255, 0.65);
