--- a/src/app.css
+++ b/src/app.css
@@ -124,3 +124,16 @@ body {
 * {
   box-sizing: border-box;
 }
+
+/* Screen reader only - for SEO h1 tag */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
