--- a/src/lib/styles/faq.module.css
+++ b/src/lib/styles/faq.module.css
@@ -302,7 +302,13 @@
   }
 
   .title {
-    display: none;
+    font-size: clamp(0.625rem, 3vw, 0.875rem);
+    margin-bottom: -2rem;
+    margin-top: 4.75rem;
+    gap: 4px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    justify-content: flex-start;
   }
 
   .triangleIcon {
